--- a/themes/ack/source/css/_common/_variables.scss
+++ b/themes/ack/source/css/_common/_variables.scss
@@ -1,4 +1,3 @@
-$global-font-size: 18px;
 $global-font-color: #34495e !default;
 $global-font-family: "Noto Serif SC", -apple-system, BlinkMacSystemFont, "PingFang SC", "Helvetica Neue", Arial, "Hiragino Sans GB", "Microsoft YaHei", "Source Han Serif SC", sans-serif;
 $monospaced-font-family: Consolas, "Roboto Mono", Monaco, monospace, "courier new", courier;
@@ -13,6 +12,7 @@ $color-white: #fefefe !default;
 $color-light-gray: #e6e6e6 !default;
 $color-gray: #cacaca !default;
 $color-dark-gray: #8a8a8a !default;
+$color-code: #476582 !default;
 
 $theme-color: $color-theme-blue;
 $theme-deputy-color: #f0f2f5;
