--- a/themes/ack/source/css/_partial/_post/_code.scss
+++ b/themes/ack/source/css/_partial/_post/_code.scss
@@ -39,6 +39,7 @@ pre {
 
 code {
     background: $color-light-gray;
+    color: $color-code;
     padding: 0.1em 0.5em;
     white-space: nowrap;
     border-radius: 0.25rem;
